unpackaged/objects/User.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTC_Range_Max_In_Lakhs__c</fullName>
        <label>CTC Range Max (In Lakhs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTC_Range_Min_In_Lakhs__c</fullName>
        <label>CTC Range Min (In Lakhs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTC_Range__c</fullName>
        <label>CTC Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 lakhs - 2 lakhs</fullName>
                </value>
                <value>
                    <fullName>2 lakhs - 3 lakhs</fullName>
                </value>
                <value>
                    <fullName>3 lakhs - 4 lakhs</fullName>
                </value>
                <value>
                    <fullName>4 lakhs - 5 lakhs</fullName>
                </value>
                <value>
                    <fullName>5 lakhs - 6 lakhs</fullName>
                </value>
                <value>
                    <fullName>6 lakhs - 7 lakhs</fullName>
                </value>
                <value>
                    <fullName>7 lakhs - 8 lakhs</fullName>
                </value>
                <value>
                    <fullName>8 lakhs - 9 lakhs</fullName>
                </value>
                <value>
                    <fullName>9 lakhs - 10 lakhs</fullName>
                </value>
                <value>
                    <fullName>10 lakhs - 11 lakhs</fullName>
                </value>
                <value>
                    <fullName>11 lakhs - 12 lakhs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Joining__c</fullName>
        <label>Date Of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Leaving__c</fullName>
        <label>Date Of Leaving</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastKnownLocation__c</fullName>
        <label>Last Known Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Secured</fullName>
                </value>
                <value>
                    <fullName>Unsecured</fullName>
                </value>
                <value>
                    <fullName>UCV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_NT__c</fullName>
        <label>Retail / NT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>UCV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>